  - new keybinding for ‘gnugo-undo-one-move’: M-u
  - you can play a move for GNU Go, e.g., after ‘M-u’
  - ‘gnugo-undo-one-move’ can optionally arrange for you to play next
  - new command: ‘S’ (gnugo-request-suggestion)
  - new command: ‘C’ (gnugo-comment)
  - new command: ‘o’ (gnugo-oops)
  - new command: ‘O’ (gnugo-okay)
  - new command: ‘L’ (gnugo-frolic-in-the-leaves)
  - new command: ‘C-c C-a’ (gnugo-toggle-abdication)
  - new major mode: GNUGO Frolic (gnugo-frolic-mode)
  - GNUGO Board mode now derived from Special mode
  - position arg validated for direct GTP commands ‘undo’, ‘gg-undo’
  - undo commands no longer signal error on overkill
  - performance improvements
  - of interest to hackers (see source, BI => backward incompatible)
    - dropped var: ‘gnugo-inhibit-refresh’ (BI)
    - ‘gnugo/sgf-read-file’ renamed to ‘gnugo/sgf-create’ and enhanced
    - ‘:sgf-gametree’ internal representation inverted (BI)
    - ‘gnugo-magic-undo’ internalized
    - new func: ‘gnugo-current-player’
    - new hook: ‘gnugo-start-game-hook’
    - ‘gnugo-board-mode-hook’ now unsuitable for prop munging (BI)
    - changes to ‘gnugo-move-history’
      - dropped ‘(gnugo-move-history 'count)’ (BI)
      - returns last two moves w/ RSEL ‘two’
      - returns position of last placed stone w/ RSEL ‘bpos’ + 2nd arg COLOR

- 2.3.1 | 2014-02-27
  - portability fixes

- 2.3.0 | 2014-02-24
  - now part of ELPA, tweaked for GNU Emacs 24.x
    - dropped support for XEmacs and older Emacs
    - use ‘user-error’ for user errors
  - bugfixes
    - handle sudden jump in captured stones correctly
    - rename hook-communication var w/ "gnugo-" prefix
    - (w/ images) grid top/bottom row spacing
  - on SGF save/load indicate buffer not modified
  - documentation improvements
    - version numbering scheme documented: MAJOR.MINOR.PATCH
    - keybinding constructs for ‘gnugo’ and ‘gnugo-board-mode’
  - message for worm/dragon animation avoids underscore
  - new commands